[package]
name = "nix"
version = "0.30.1"
edition = "2021"

[features]
# @see https://docs.rs/crate/nix/latest/source/Cargo.toml
acct = []
aio = ["pin-utils"]
default = []
dir = ["fs"]
env = []
event = ["poll"]
fanotify = []
feature = []
fs = []
hostname = []
inotify = []
ioctl = []
kmod = []
mman = []
mount = ["uio"]
mqueue = ["fs"]
net = ["socket"]
personality = []
poll = []
process = []
pthread = []
ptrace = ["process"]
quota = []
reboot = []
resource = []
sched = ["process"]
signal = ["process"]
socket = ["memoffset"]
syslog = []
term = []
time = []
ucontext = ["signal"]
uio = []
user = ["feature"]
zerocopy = ["fs", "uio"]

[lib]
path = "lib.rs"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_System_Threading", "Win32_Foundation"] }

[target.'cfg(unix)'.dependencies]
nix = "0.30.1"