[package]
name = "nix"
version = "0.30.1"
edition = "2021"

# @see https://docs.rs/crate/nix/latest/source/Cargo.toml

[target.'cfg(unix)'.build-dependencies.cfg_aliases]
version = "0.2.1"

[target.'cfg(unix)'.dependencies.bitflags]
version = "2.3.3"

[target.'cfg(unix)'.dependencies.cfg-if]
version = "1.0"

[target.'cfg(unix)'.dependencies.libc]
features = ["extra_traits"]
version = "0.2.171"

[target.'cfg(unix)'.dependencies.memoffset]
optional = true
version = "0.9"

[target.'cfg(unix)'.dependencies.pin-utils]
optional = true
version = "0.1.0"

[target.'cfg(unix)'.dev-dependencies.assert-impl]
version = "0.1"

[target.'cfg(unix)'.dev-dependencies.parking_lot]
version = "0.12"

[target.'cfg(unix)'.dev-dependencies.rand]
version = "0.9"

[target.'cfg(unix)'.dev-dependencies.semver]
version = "1.0.7"

[target.'cfg(unix)'.dev-dependencies.tempfile]
version = "3.7.1"

[target.'cfg(any(target_os = "android", target_os = "linux"))'.dev-dependencies.caps]
version = "0.5.3"

[target.'cfg(target_os = "freebsd")'.dev-dependencies.sysctl]
version = "0.4"

[features]
acct = []
aio = ["pin-utils"]
default = []
dir = ["fs"]
env = []
event = ["poll"]
fanotify = []
feature = []
fs = []
hostname = []
inotify = []
ioctl = []
kmod = []
mman = []
mount = ["uio"]
mqueue = ["fs"]
net = ["socket"]
personality = []
poll = []
process = []
pthread = []
ptrace = ["process"]
quota = []
reboot = []
resource = []
sched = ["process"]
signal = ["process"]
socket = ["memoffset"]
syslog = []
term = []
time = []
ucontext = ["signal"]
uio = []
user = ["feature"]
zerocopy = ["fs", "uio"]

[lib]
path = "lib.rs"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_System_Threading", "Win32_Foundation"] }

[target.'cfg(unix)'.dependencies]
nix_sys = { package = "nix", version = "0.30.1" }